# voltalis-homeassistant

./: .dockerignore  .gitignore  CONTRIBUTING.md  DEV_GUIDE.md  Dockerfile  LICENSE  README.fr.md  README.md  compose.yaml  conftest.py  ha-quality-checks.md  hacs.json  pyproject.toml
.devcontainer/: devcontainer.json
.github/: copilot-instructions.md  release_template.md
.github/workflows/: check-version-bump.yml  hacs-validation.yml  hassfest-validation.yml  hassfest.yml  sync-version-with-tag.yml  tests.yml  validate.yml  zip-release.yml
custom_components/voltalis/: __init__.py  binary_sensor.py  climate.py  config_flow.py  const.py  icons.json  manifest.json  quality_scale.yaml  select.py  sensor.py  services.py  services.yaml  strings.json  switch.py  water_heater.py
custom_components/voltalis/apps/home_assistant/: home_assistant_module.py
custom_components/voltalis/apps/home_assistant/coordinators/: base.py  device.py  device_daily_consumption.py  device_health.py  device_realtime_consumption.py  energy_contract.py  live_consumption.py  program.py
custom_components/voltalis/apps/home_assistant/entities/: config_entry_data.py  voltalis_program_select.py
custom_components/voltalis/apps/home_assistant/tests/: __init__.py  home_assistant_fixture.py
custom_components/voltalis/lib/: voltalis_module.py
custom_components/voltalis/lib/application/: date_provider.py  voltalis_client.py  voltalis_provider.py
custom_components/voltalis/lib/application/providers/: http_client.py
custom_components/voltalis/lib/application/repositories/: voltalis_repository.py
custom_components/voltalis/lib/domain/: config_entry_data.py  coordinator.py  custom_model.py  device.py  exceptions.py  range_model.py  voltalis_contract_entity.py  voltalis_device_entity.py  voltalis_entity.py
custom_components/voltalis/lib/domain/base_entities/: voltalis_base_entity.py  voltalis_device_entity.py  voltalis_energy_contract_entity.py
custom_components/voltalis/lib/domain/coordinators/: base.py  consumption_coordinator.py  coordinator.py  device.py  device_consumption.py  device_daily_consumption.py  device_daily_consumption_2.py  device_health.py  device_realtime_consumption.py  device_settings.py  energy_contract.py  live_consumption.py  program.py
custom_components/voltalis/lib/domain/energy_contracts/: energy_contract.py  energy_contract_builder.py  energy_contract_current_mode_enum.py  energy_contract_enum.py  energy_contract_service.py  live_consumption.py
custom_components/voltalis/lib/domain/entities/: voltalis_climate.py  voltalis_connected_sensor.py  voltalis_consumption_sensor.py  voltalis_contract_info_sensor.py  voltalis_default_temperature_sensor.py  voltalis_device_connected_sensor.py  voltalis_device_consumption_sensor.py  voltalis_device_current_mode_sensor.py  voltalis_device_preset_select.py  voltalis_device_programming_sensor.py  voltalis_energy_contract_info_sensor.py  voltalis_heating_level_sensor.py  voltalis_manual_mode_sensor.py  voltalis_program_select.py  voltalis_program_switch.py  voltalis_programming_name_sensor.py  voltalis_programming_type_sensor.py  voltalis_water_heater.py
custom_components/voltalis/lib/domain/helpers/: is_in_time_range.py
custom_components/voltalis/lib/domain/models/: device.py  device_health.py  energy_contract.py  manual_setting.py  program.py  subscriber_contract.py
custom_components/voltalis/lib/domain/sensors/: voltalis_active_program_sensor.py  voltalis_connected_sensor.py  voltalis_consumption_sensor.py  voltalis_current_power_sensor.py  voltalis_device_sensor.py  voltalis_device_sensors.py  voltalis_yearly_objective_sensor.py
custom_components/voltalis/lib/domain/shared/: exceptions.py  generic_builder.py  range_model.py
custom_components/voltalis/lib/infrastructure/: date_provider_real.py  date_provider_stub.py  http_client_aiohttp.py  voltalis_client_aiohttp.py  voltalis_client_stub.py  voltalis_provider_voltalis_api.py
custom_components/voltalis/lib/infrastructure/dtos/: voltalis_device.py  voltalis_device_consumption.py  voltalis_device_health.py  voltalis_manual_setting.py  (+3 more)
custom_components/voltalis/tests/: base_fixture.py  conftest.py  test_climate.py  test_config_flow.py  test_init.py  test_new_sensors.py  test_select.py  test_sensor.py  test_switch.py  test_water_heater.py
custom_components/voltalis/tests/utils/: base_fixture.py  custom_json_encoder.py  mock_http_server.py  mock_voltalis_server.py  pretty_dict_differ.py
custom_components/voltalis/translations/: en.json  fr.json
custom_components/voltalis/wip/: climate.py  sensor.py  water_heater.py
(+195 files in other folders)
